# lsm-tree

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TODO.md  after-after.csv  after.csv  analyse.sh  before.csv  bench-wp8-results.md  bench.sh  cabal.project  cabal.project.blockio-uring  cabal.project.debug  cabal.project.release  lsm-tree.cabal  setup.sh  temp.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: blank-issue.md  bug_report.md  feature_request.md
.github/workflows/: cabal.project.local.haskell  check-release-builds.yml  ci.yml  documentation.yml  haskell.yml
_bench_wp8_greedy/: latency-200000.gp  latency-cumulative-200000.gp  output-200000.txt
_bench_wp8_incremental/: latency-200000.gp  latency-cumulative-200000.gp  output-200000.txt
_bench_wp8_oneshot/: latency-200000.gp  latency-cumulative-200000.gp  output-200000.txt
app/: Main.hs
bench-unions/: unions-bench.gnuplot
bench-unions/Bench/: Unions.hs
bench/macro/: Main.hs  initial-lsm-bench.hs  lsm-tree-bench-bloomfilter.hs  lsm-tree-bench-lookups.hs  lsm-tree-bench-union.hs  lsm-tree-bench-unions.hs  lsm-tree-bench-wp8.hs  rocksdb-bench-wp8.hs  utxo-bench.hs
bench/micro/: Main.hs
blockio/: CHANGELOG.md  NOTICE  README.md  blockio.cabal
blockio-api/: CHANGELOG.md  README.md  blockio-api.cabal
blockio-api/test/: Main.hs
blockio-api/test-sim/: Main.hs
blockio-sim/test/: Main.hs
blockio/src-linux/System/FS/BlockIO/: Async.hs  Internal.hs
blockio/src-linux/System/FS/BlockIO/Internal/: Fcntl.hsc
blockio/src-macos/System/FS/BlockIO/: Internal.hs
blockio/src-macos/System/FS/BlockIO/Internal/: Fcntl.hsc
blockio/src-sim/System/FS/BlockIO/: Sim.hs
blockio/src-windows/System/FS/BlockIO/: Internal.hs
blockio/src/System/FS/: BlockIO.hs
blockio/src/System/FS/BlockIO/: API.hs  IO.hs  Serial.hs
blockio/src/System/FS/BlockIO/IO/: Internal.hs
blockio/src/System/FS/BlockIO/Serial/: Internal.hs
blockio/test/: Main.hs
blockio/test-sim/: Main.hs
blockio/test/Test/System/Posix/Fcntl/: NoCache.hs
bloomfilter/: CHANGELOG.md  README.markdown  bloomfilter.cabal  fpr.blocked.gnuplot.data  fpr.gnuplot
bloomfilter-blocked/: CHANGELOG.md  LICENSE-bloomfilter  README.md  bloomfilter-blocked.cabal  fpr.classic.gnuplot.data
bloomfilter-blocked/bench/: bloomfilter-bench.hs
bloomfilter-blocked/examples/: spell.hs
bloomfilter-blocked/src/Data/: BloomFilter.hs
bloomfilter-blocked/src/Data/BloomFilter/: Blocked.hs  Classic.hs
bloomfilter-blocked/src/Data/BloomFilter/Blocked/: BitArray.hs  Calc.hs  Internal.hs
bloomfilter-blocked/src/Data/BloomFilter/Classic/: Calc.hs  Internal.hs
bloomfilter-blocked/tests/: bloomfilter-tests.hs  fpr-calc.hs
bloomfilter-blocked/xxhash/src/: FFI.hs  XXH3.hs
bloomfilter-blocked/xxhash/tests/: xxhash-tests.hs
bloomfilter/Data/: BloomFilter.hs
bloomfilter/bench/: bloomfilter-bench.hs
bloomfilter/cbits/: lookup3.h
bloomfilter/examples/: Words.hs  spell.hs
bloomfilter/tests/: QC.hs  QCSupport.hs  bloomfilter-tests.hs  fpr-calc.hs  primes.hs
crc32c/: LICENSE  README.md  crc32c.cabal
crc32c/test/: Spec.hs
doc/: format-directory.md  format-page.md  format-run.md
doc/final-report/: final-report.md  integration-notes.md  makefile
fs-api-blockio/test/: Main.hs
lsm-tree/: CHANGELOG.md  NOTICE  README.md  lsm-tree.cabal
lsm-tree/app/: Main.hs
lsm-tree/bench-unions/: Main.hs
lsm-tree/src-prototypes/: ScheduledMerges.hs
lsm-tree/src-rocksdb/: RocksDB.hs
lsm-tree/test/: Main.hs
lsm-tree/test-control/: Main.hs
lsm-tree/test-prototypes/: Main.hs
prototypes/: FormatPage.hs  ScheduledMerges.hs  ScheduledMergesTest.hs  ScheduledMergesTestQLS.hs  Test.hs
scripts/: build-readme.hs  cabal-list-public-library-targets.hs  check-cabal.sh  check-release-builds.hs  dump-diskio-complexities.hs  find-missing-io-specialisations.sh  format-cabal-fd.sh  format-cabal-find.sh  format-cabal-fmt.sh  format-cabal.sh  format-stylish-fd.sh  format-stylish-find.sh  format-stylish-haskell.sh  format-stylish.sh  generate-haddock-prologue.hs  generate-haddock.sh  generate-readme-header.md  generate-readme.hs  haddocks.sh  lint-actionlint.sh  lint-cabal.sh  lint-diskio-complexities.hs  lint-hlint.sh  lint-io-specialisations.sh  lint-shellcheck.sh  pre-commit.sh  test-cabal-docspec.sh
scripts/diskio-complexities/: dump-from-source.sh
scripts/find-missing-io-specialisations.tests/: Animals.Sheep.hs
scripts/io-specialisations/: find-absent.sh
scripts/lint-diskio-complexities/: dump-from-package-description.hs  dump-from-source.sh
scripts/lint-io-specialisations/: find-absent.sh
scripts/time-complexities/: from-cabal.sh  from-hs.sh
src-control/Control/: ActionRegistry.hs  RefCount.hs  TempRegistry.hs
src-experiments/: ClashProbability.hs
src-ghc-internal-file-lock/: README.md
src-kmerge/KMerge/: Heap.hs  LoserTree.hs
src-mcg/: MCG.hs
src-monkey/: Monkey.hs
src-prototypes/: FormatPage.hs  ScheduledMerges.hs
src-rocksdb/: RocksDB.hs
src/Data/: Arena.hs
src/Database/: LSMTree.hs
test/: Main.hs  codec-test.hs  kmerge-test.hs  lsm-prototypes-tests.hs  map-range-test.hs
test-control/: Main.hs
test-prototypes/: Main.hs
test-prototypes/Test/: FormatPage.hs  ScheduledMerges.hs  ScheduledMergesQLS.hs
test/Test/: FS.hs
test/codec-data/: SnapLevels-001.checksum.golden  SnapLevels-003.snapshot.golden  SnapLevels-004.snapshot.golden  SnapLevels-005.checksum.golden  SnapLevels-005.snapshot.golden  SnapLevels-006.checksum.golden  SnapLevels-006.snapshot.golden  SnapLevels-007.checksum.golden  SnapLevels-007.snapshot.golden  SnapLevels-008.checksum.golden  SnapLevels-008.snapshot.golden  SnapLevels-009.checksum.golden  SnapLevels-009.snapshot.golden  SnapLevels-010.checksum.golden  SnapLevels-010.snapshot.golden  SnapLevels-011.checksum.golden  SnapLevels-011.snapshot.golden  SnapLevels-012.checksum.golden  SnapLevels-012.snapshot.golden  SnapLevels-013.checksum.golden  SnapLevels-013.snapshot.golden  (+231 more)
(+1394 files in other folders)
